--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,13 @@ img{
 #work{
 	background-color: #f5f5f5;
 	border-bottom:none;
+
 }
 .cepat{
 	background-color: white;
 	border-radius: 6px;
 	border-color:black;
+	border:1px solid #e7e7e7;
 }
 .category{
 	color: #33373D;
@@ -156,4 +158,22 @@ img{
 #pencarian{
 	padding: 33px 0px;
 	width: 12.5% !important;
+}
+.popdar{
+	margin-bottom: 10px;
+}
+.grey-text{
+	color:#89959B;
+}
+.pop{
+	padding:1em;
+}
+.pop a{
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+	display: block;
+	text-align:left;
+	font-size:14px;
+}
+.pop a:hover{
+	color:#2d2d2d;
 }
